Add Google Analytics

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.5.0",
     "vuepress": "^1.5.0"
   },
   "dependencies": {
