--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vuepress": "^1.5.0"
   },
   "dependencies": {
-    "markdown-it-katex": "^2.0.3"
+    "markdown-it-katex": "^2.0.3",
+    "vuepress-plugin-sitemap": "^2.3.1"
   }
 }
