--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "stanley.id",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/AngSanley/stanley.id.git",
-  "author": "Stanley <angstanley68@gmail.com>",
-  "license": "MIT",
+  "private": true,
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
-  },
-  "devDependencies": {
-    "@vuepress/plugin-google-analytics": "^1.5.0",
-    "vuepress": "^1.5.0"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint": "yarn lint:js"
   },
   "dependencies": {
-    "markdown-it-katex": "^2.0.3",
-    "vuepress-plugin-sitemap": "^2.3.1"
+    "@nuxt/content": "^1.11.1",
+    "@nuxtjs/axios": "^5.12.5",
+    "core-js": "^3.8.3",
+    "nuxt": "^2.14.12"
+  },
+  "devDependencies": {
+    "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/tailwindcss": "^3.4.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.18.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-vue": "^7.5.0"
   }
 }
