--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/content": "^1.11.1",
     "@nuxtjs/axios": "^5.12.5",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12"
   },
