feat(hero): Add hover tooltip

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/axios": "^5.12.5",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "vue-tippy": "^4.7.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^5.0.0",
