--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
+    "nuxt-material-design-icons": "^1.0.4",
     "vue-tippy": "^4.7.3",
     "vue-unicons": "^2.3.0"
   },
