refactor: Rename description to subtitle and add real descriptions

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,6 +23,7 @@ collections:
       preview: false
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Subtitle', name: 'subtitle', widget: 'string' }
       - { label: 'Icon URL', name: 'icon', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
