feat(netlifycms): Update branch

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: canary # Branch to update (optional; defaults to master)
+  # branch: canary # Branch to update (optional; defaults to master)
   commit_messages:
     create: "content: Create {{collection}} “{{slug}}”"
     update: "content: Update {{collection}} “{{slug}}”"
