--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "vue-gtag": "^1.16.1",
     "vue-tippy": "^4.10.2",
     "vue-unicons": "^3.2.1"
+    "vue-tippy": "^4.10.2"
   },
   "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
