--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "moment": "^2.29.1",
     "nuxt": "^2.15.8",
     "nuxt-material-design-icons": "^1.0.4",
-    "vue-gtag": "^1.16.1",
-    "vue-tippy": "^4.10.2"
+    "vue-gtag": "^1.16.1"
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
