--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "autoprefixer": "^10",
+    "autoprefixer": "^10.4.12",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.5.0",
-    "postcss": "^8",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
