--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.2",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vue": "^4.5.0",
     "@fontsource-variable/inter-tight": "^5.0.21",
     "@fontsource-variable/sora": "^5.0.18",
     "astro": "^4.12.1",
+    "astro-seo": "^0.8.4",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3",
     "vue": "^3.4.32"
