fix: broken deps

--- a/package.json
+++ b/package.json
@@ -23,16 +23,15 @@
     "vue": "^3.4.33"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.23.1",
+    "@antfu/eslint-config": "^3.7.3",
     "@iconify-json/logos": "^1.1.43",
     "@iconify-json/ph": "^1.1.13",
     "@iconify-json/vscode-icons": "^1.1.36",
-    "@unocss/eslint-plugin": "^0.61.5",
+    "@unocss/eslint-plugin": "^0.63.4",
     "astro-eslint-parser": "^1.0.2",
     "astro-icon": "^1.1.0",
-    "eslint": "9.7.0",
+    "eslint": "^9.12.0",
     "eslint-plugin-astro": "^1.2.3",
-    "eslint-plugin-format": "^0.1.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "eslint-plugin-format": "^0.1.2"
   }
 }
