--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/sora": "^5.0.18",
     "astro": "^4.12.2",
     "astro-seo": "^0.8.4",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3",
     "vue": "^3.4.33"
